# croeso

./: .gitignore  Procfile  README.md  db.sqlite3  img.py  pyproject.toml  requirements.txt  serve.py
app/: views.py
app/fixtures/: seeds.yaml
proj/: settings.py
