[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>0.12"]

[tool]
[tool.poetry]
authors = ["Somebody <you@example.com>"]
description = ""
name = "Croeso i Cymru"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^4.0"
python = "^3.8"
PyYAML = "^6.0"
django-crispy-forms = "^1.14.0"
requests = "^2.27.1"
tornado = "^6.1"
django-heroku = "^0.3.1"
Pillow = "^9.1.1"
[tool.poetry.dev-dependencies]
